--- a/index.html
+++ b/index.html
@@ -116,10 +116,22 @@
         <h3>Contact & Location</h3>
         <p><strong>Holy Angels Public School</strong><br>
            4/17 UIT Bhiwadi, Rajasthan, India</p>
-        <p class="muted">Phone and email fields can be added when available.</p>
+        <p class="muted">Mail us @ info@holyangelspublicschool.in</p>
 
         <div class="map">
-          <!-- Lightweight map placeholder -->
+          <!-- Embedded Google Map -->
+<div style="width:100%;max-width:800px;margin:0 auto;border-radius:12px;overflow:hidden;">
+  <iframe
+    src="https://www.google.com/maps?q=4/17%20UIT%20Bhiwadi%20Rajasthan%20India&output=embed"
+    width="100%"
+    height="400"
+    style="border:0;"
+    allowfullscreen=""
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</div>
+
           <svg viewBox="0 0 600 200" xmlns="http://www.w3.org/2000/svg"><rect width="600" height="200" fill="#f8f9fa"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#6c757d" font-family="Arial" font-size="16">Map placeholder — replace with embedded map or image</text></svg>
         </div>
       </div>
