--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
         <h3>Contact & Location</h3>
         <p><strong>Holy Angels Public School</strong><br>
            4/17 UIT Bhiwadi, Rajasthan, India</p>
-        <p class="muted">Mail us @ info@holyangelspublicschool.in</p>
+        <p>Mail us @ info@holyangelspublicschool.in</p>
 
-        <div class="map">
+      
           <!-- Embedded Google Map -->
-<div style="width:100%;max-width:800px;margin:0 auto;border-radius:12px;overflow:hidden;">
+<div class="map" style="width:100%;max-width:800px;margin:0 auto;border-radius:12px;overflow:hidden;">
   <iframe
     src="https://www.google.com/maps?q=4/17%20UIT%20Bhiwadi%20Rajasthan%20India&output=embed"
     width="100%"
