--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         <p>Sample images and campus snapshots (placeholders). Replace with real photos in <code>/assets/images</code>.</p>
         <div class="gallery">
           <!-- simple SVG placeholders -->
-          <div class="photo">
-            <svg viewBox="0 0 300 200" xmlns="http://www.w3.org/2000/svg"><rect width="300" height="200" rx="8" fill="#e9f5f7"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#6c757d" font-family="Arial" font-size="18">Photo Placeholder</text></svg>
+          <div class="photo"> 
+            <img src="assets/images/WhatsApp Image 2025-10-17 at 10.33.35 AM.jpeg" alt="Holy Angels Public School">
           </div>
           <div class="photo">
             <svg viewBox="0 0 300 200" xmlns="http://www.w3.org/2000/svg"><rect width="300" height="200" rx="8" fill="#e9f5f7"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#6c757d" font-family="Arial" font-size="18">Photo Placeholder</text></svg>
@@ -131,9 +131,6 @@
     referrerpolicy="no-referrer-when-downgrade">
   </iframe>
 </div>
-
-          <svg viewBox="0 0 600 200" xmlns="http://www.w3.org/2000/svg"><rect width="600" height="200" fill="#f8f9fa"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#6c757d" font-family="Arial" font-size="16">Map placeholder — replace with embedded map or image</text></svg>
-        </div>
       </div>
     </section>
   </main>
