--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="gallery">
           <!-- simple SVG placeholders -->
           <div class="photo"> 
-            <img src="assets/images/WhatsApp Image 2025-10-17 at 10.33.35 AM.jpeg" alt="Holy Angels Public School">
+            <img src="assets/images/holyangels.jpeg" alt="Holy Angels Public School">
           </div>
           <div class="photo">
             <svg viewBox="0 0 300 200" xmlns="http://www.w3.org/2000/svg"><rect width="300" height="200" rx="8" fill="#e9f5f7"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#6c757d" font-family="Arial" font-size="18">Photo Placeholder</text></svg>
