--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                 <div class="bg-white rounded-xl shadow-lg overflow-hidden">
                     <div class="h-96">
                         <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3506.2233913121413!2d77.0304153!3d28.4594965!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d19d582e38859%3A0x2cf5d8c5b3f5c5d5!2sBhiwadi%2C%20Rajasthan!5e0!3m2!1sen!2sin!4v1635749045123!5m2!1sen!2sin"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2550.1729519811183!2d76.82796517934571!3d28.200721252251448!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d376972ab8ed3%3A0x41b9205411013cd9!2sHoly%20Angels%20Public%20School!5e1!3m2!1sen!2sin!4v1761056654150!5m2!1sen!2sin"
                             width="100%" 
                             height="100%" 
                             style="border:0;" 
