--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
                     <div class="mt-6 p-4 bg-yellow-50 rounded-lg">
                         <p class="text-sm text-gray-700"><strong>Required Documents:</strong> Birth certificate, previous school records, and parent/guardian ID.</p>
                     </div>
-                    <button class="w-full bg-indigo-600 text-white py-3 rounded-lg font-semibold mt-6 hover:bg-indigo-700 transition-colors">
+                    <button class="w-full bg-indigo-600 text-white py-3 rounded-lg font-semibold mt-6 hover:bg-indigo-700 transition-colors" onclick="window.open('https://share.google/dkxS2WHRIykfuAiOc'>
                         Get Directions
                     </button>
                 </div>
@@ -738,7 +738,7 @@
                     <div class="p-6">
                         <h3 class="text-lg font-semibold text-gray-900 mb-2">Getting Here</h3>
                         <p class="text-gray-600 text-sm">Located in UIT Bhiwadi, Rajasthan, easily accessible by car or public transportation. Free parking available on campus.</p>
-                        <button class="mt-4 bg-indigo-600 text-white px-6 py-2 rounded-lg font-semibold hover:bg-indigo-700 transition-colors" onclick="window.open('https://www.google.com/maps/dir//Bhiwadi,+Rajasthan/@28.4594965,77.0304153,17z', '_blank')">
+                        <button class="mt-4 bg-indigo-600 text-white px-6 py-2 rounded-lg font-semibold hover:bg-indigo-700 transition-colors" onclick="window.open('https://share.google/dkxS2WHRIykfuAiOc', '_blank')">
                             Get Directions
                         </button>
                     </div>
